# sphinx-autoapi

./: .gitignore  .nojekyll  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.rst  appveyor.yml  config.html  design.html  dn-modindex.html  genindex.html  go-pkgindex.html  index.html  objects.inv  prospector.yml  pylintrc  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  templates.html  tox.ini  tox.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  release.yml
_sources/: design.txt  index.txt
_sources/autoapi/: index.txt
_sources/autoapi/main/: index.txt
_sources/autoapi/uuid/: index.txt
autoapi/: __init__.py  _astroid_utils.py  _mapper.py  _objects.py  _parser.py  _version.py  backends.py  base.py  directives.py  documenters.py  dotnet.py  extension.py  index.html  inheritance_diagrams.py  python.py  settings.py  toctree.py  utils.py
autoapi/Microsoft/AspNet/Builder/: index.html
autoapi/Microsoft/AspNet/JsonPatch/: index.html
autoapi/Microsoft/AspNet/Mvc/: index.html
autoapi/Microsoft/AspNet/PageExecutionInstrumentation/: index.html
autoapi/Microsoft/Framework/DependencyInjection/: index.html
autoapi/MvcMinimalSample/Web/Startup/: index.html
autoapi/System/Net/Http/: index.html
autoapi/domains/: __init__.py  base.py  dotnet.py  go.py  javascript.py  python.py
autoapi/main/: index.html
autoapi/mappers/: __init__.py  astroid_utils.py  base.py  dotnet.py  go.py  javascript.py  python.py
autoapi/mappers/python/: __init__.py  astroid_utils.py  mapper.py  objects.py  parser.py
autoapi/templates/: class.rst  index.md  index.rst  member.rst  methods.rst
autoapi/templates/base/: base.md  base.rst
autoapi/templates/dotnet/: base_detail.rst  base_embed.rst  base_list.rst  class.rst  constructor.rst  delegate.rst  enum.rst  field.rst  interface.rst  member.rst  method.rst  namespace.rst  struct.rst
autoapi/templates/go/: base_member.rst  func.rst  package.rst  variable.rst
autoapi/templates/javascript/: class.rst  function.rst  member.rst  module.rst
autoapi/templates/python/: attribute.md  class.md  class.rst  data.md  data.rst  exception.md  function.md  function.rst  member.rst  method.md  method.rst  module.md  module.rst  package.md  package.rst  property.md  property.rst
autoapi/uuid/: index.html
doc/changes/: .misc.rst  377.doc.rst
doc/source/: conf.py  index.rst
doc/source/_static/: overrides.css
doc/source/maintenance/: design.rst  index.rst
doc/source/reference/: config.rst  index.rst  templates.rst
docs/: conf.py  config.rst  design.rst  directives.rst  foo.rst  how_to.rst  index.rst  requirements.txt  templates.rst  tutorials.rst
docs/changes/: +0b0b82e4.misc  +168cc6cb.misc.rst  +34248af0.feature.rst  +41a5919b.feature.rst  +47c37f4d.removal  +52f8a406.misc.rst  +5819ffe5.misc  +59dd3b40.misc  +674382f2.misc.rst  +76d54892.misc.rst  +7e9094d4.removal  +7eaa921c.misc.rst  +830573ef.misc.rst  +8cd14c4f.bugfix  +9b32031d.misc  +a134e154.bugfix.rst  +a772f117.misc.rst  +af2042c3.misc  +bb72571e.feature.rst  +c9447449.feature.rst  +cf0a1267.misc  +d02885a9.bugfix.rst  +d379912c.feature.rst  +d97c5f48.misc.rst  +e2fe0940.misc.rst  +e46a53a8.bugfix  +f5e49f9f.misc.rst  +fa8d867e.misc.rst  +toctree.removal.rst  224.bugfix  226.feature  248.removal  248.removal.rst  312.feature.rst  319.bugfix.rst  339.doc.rst  366.bugfix  369.removal.rst  375.misc.rst  382.misc.rst  (+51 more)
docs/maintenance/: design.rst  release-process.rst
docs/reference/: config.rst  directives.rst  index.rst  templates.rst
src/autoapi/: __init__.py  _mapper.py  _objects.py  _parser.py  documenters.py  settings.py
tests/: Microsoft.CodeAnalysis.AdhocWorkspace.yaml  test_astroid_utils.py  test_domains.py  test_dotnet_domain.py  test_dotnet_objects.py  test_full.py  test_integration.py  test_objects.py  test_python_full.py  test_python_parser.py
tests/dotnetexample/: .nojekyll  Makefile  README.md  conf.py  dn-modindex.html  genindex.html  index.html  index.rst
tests/dotnetexample/example/: Microsoft.CodeAnalysis.AdhocWorkspace.yml  clone.sh
tests/fixtures/: dotnet.json  go.json  javascript.json  parsed_go.json
tests/goexample/: Makefile  conf.py  index.rst
tests/goexample/example/: godocjson.go
tests/jsexample/: conf.py  index.rst
tests/jsexample/example/: jsdoc-example.js
tests/pyexample/: conf.py  index.rst  manualapi.rst
tests/pyexample/example/: example.py
tests/pypackageexample/: index.rst
tests/pypackageexample/example/: _private_module.py
tests/python/: conftest.py  test_astroid_utils.py  test_own_page_option.py  test_parser.py  test_pyintegration.py
tests/python/pep695/: conf.py
tests/python/py310unionpipe/: conf.py
tests/python/py38positionalparams/: conf.py
tests/python/py3example/: conf.py  index.rst
tests/python/py3implicitnamespace/: conf.py  index.rst
tests/python/py3moduleexample/: conf.py
tests/python/pyannotationcommentsexample/: conf.py
tests/python/pyannotationsexample/: conf.py
tests/python/pyautodoc_typehints/: conf.py
tests/python/pyemptyexample/: conf.py
tests/python/pyexample/: conf.py  index.rst  manualapi.rst  null.rst
tests/python/pyiexample/: conf.py  index.rst
tests/python/pyiexample2/: conf.py  index.rst
tests/python/pyisubmoduleinit/: conf.py  index.rst
tests/python/pymarkdownexample/: conf.py  index.md  manualapi.md
tests/python/pymissing_import/: conf.py  index.rst  manualapi.rst
tests/python/pymovedconfpy/: example  index.rst  manualapi.rst
tests/python/pynorender/: conf.py
tests/python/pypackagecomplex/: conf.py  index.rst
tests/python/pypackagecomplex_single_page/: conf.py  index.rst
tests/python/pypackageexample/: conf.py
tests/python/pyskipexample/: conf.py
tests/python/pystdlib/: conf.py
tests/python/pytypeparams/: conf.py
tests/templateexample/: conf.py
tests/templateexample/example/: example.py
tests/toctreeexample/: conf.py  index.rst
tests/toctreeexample/example/: example_2
tests/toctreeexample/example_2/: example_2.py
(+2289 files in other folders)
