[build-system]
requires = ["setuptools>=46.4.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "astroid.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autoapi.documenters"
ignore_errors = true

[[tool.mypy.overrides]]
module = "autoapi._astroid_utils"

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one can be tricky to get passing if you use a lot of untyped libraries
# Ignore until astroid is typed (https://github.com/pylint-dev/astroid/issues/2060)
warn_return_any = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.towncrier]
directory = "docs/changes"
filename = "CHANGELOG.rst"
package = "autoapi"
title_format = "v{version} ({project_date})"
underlines = ["-", "^", "\""]
