[metadata]
name = sphinx-autoapi
version = attr: autoapi.__version__
author = Eric Holscher
author_email = eric@ericholscher.com
maintainer = Ashley Whetter
maintainer_email = ashley@awhetter.co.uk
description = Sphinx API documentation generator
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/readthedocs/sphinx-autoapi
license = MIT
license_files =
    LICENSE.rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://sphinx-autoapi.readthedocs.io/en/latest/

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    astroid>=2.7
    Jinja2
    PyYAML
    sphinx>=5.2.0
    unidecode

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
go =
    sphinxcontrib-golangdomain
dotnet =
    sphinxcontrib-dotnetdomain

[options.packages.find]
include =
    autoapi
    autoapi.*

[bdist_wheel]
universal = 1
